tests/bad/type3.c
int main() { char* c = 'c' }
